--- a/Project.ipynb
+++ b/Project.ipynb
@@ -33,10 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fifteen = pd.read_csv(\"2015.csv\")\n",
-    "sixteen = pd.read_csv(\"2016.csv\")\n",
-    "seventeen = pd.read_csv(\"2017.csv\")\n",
-    "eighteen = pd.read_csv(\"2018.csv\")\n",
     "nineteen = pd.read_csv(\"2019.csv\")"
    ]
   },
@@ -46,40 +42,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seventeen = seventeen.rename(columns = {\n",
-    "    'Happiness.Rank':'Happiness Rank', 'Economy..GDP.per.Capita.':'Economy (GDP per Capita)', \n",
-    "    'Health..Life.Expectancy.':'Health (Life Expectancy)','Trust..Government.Corruption.':'Trust (Government Corruption)'\n",
-    "})\n",
-    "\n",
-    "eighteen = eighteen.rename(columns = {\n",
-    "    'Country or region':'Country', 'Overall rank':'Happiness Rank', 'GDP per capita':'Economy (GDP per Capita)',\n",
-    "    'Social support':'Family', 'Healthy life expectancy':'Health (Life Expectancy)', 'Freedom to make life choices':'Freedom',\n",
-    "    'Perceptions of corruption':'Trust (Government Corruption)'\n",
-    "})\n",
-    "nineteen = nineteen.rename(columns = {\n",
-    "    'Country or region':'Country', 'Overall rank':'Happiness Rank', 'GDP per capita':'Economy (GDP per Capita)',\n",
-    "    'Social support':'Family', 'Healthy life expectancy':'Health (Life Expectancy)', 'Freedom to make life choices':'Freedom',\n",
-    "    'Perceptions of corruption':'Trust (Government Corruption)'\n",
-    "})"
+    "nineteen.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Happiness Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Economy (GDP per Capita)</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health (Life Expectancy)</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Trust (Government Corruption)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>152</td>\n",
+       "      <td>Rwanda</td>\n",
+       "      <td>3.334</td>\n",
+       "      <td>0.359</td>\n",
+       "      <td>0.711</td>\n",
+       "      <td>0.614</td>\n",
+       "      <td>0.555</td>\n",
+       "      <td>0.217</td>\n",
+       "      <td>0.411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>153</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>3.231</td>\n",
+       "      <td>0.476</td>\n",
+       "      <td>0.885</td>\n",
+       "      <td>0.499</td>\n",
+       "      <td>0.417</td>\n",
+       "      <td>0.276</td>\n",
+       "      <td>0.147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>154</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>3.203</td>\n",
+       "      <td>0.350</td>\n",
+       "      <td>0.517</td>\n",
+       "      <td>0.361</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>0.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>155</td>\n",
+       "      <td>Central African Republic</td>\n",
+       "      <td>3.083</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>0.225</td>\n",
+       "      <td>0.235</td>\n",
+       "      <td>0.035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>156</td>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>2.853</td>\n",
+       "      <td>0.306</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>0.295</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.202</td>\n",
+       "      <td>0.091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Happiness Rank                   Country  Score  \\\n",
+       "151             152                    Rwanda  3.334   \n",
+       "152             153                  Tanzania  3.231   \n",
+       "153             154               Afghanistan  3.203   \n",
+       "154             155  Central African Republic  3.083   \n",
+       "155             156               South Sudan  2.853   \n",
+       "\n",
+       "     Economy (GDP per Capita)  Family  Health (Life Expectancy)  Freedom  \\\n",
+       "151                     0.359   0.711                     0.614    0.555   \n",
+       "152                     0.476   0.885                     0.499    0.417   \n",
+       "153                     0.350   0.517                     0.361    0.000   \n",
+       "154                     0.026   0.000                     0.105    0.225   \n",
+       "155                     0.306   0.575                     0.295    0.010   \n",
+       "\n",
+       "     Generosity  Trust (Government Corruption)  \n",
+       "151       0.217                          0.411  \n",
+       "152       0.276                          0.147  \n",
+       "153       0.158                          0.025  \n",
+       "154       0.235                          0.035  \n",
+       "155       0.202                          0.091  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dfs = [fifteen, sixteen, seventeen, eighteen, nineteen]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for df in dfs:\n",
-    "    print(df.columns)"
+    "nineteen.tail()"
    ]
   }
  ],
