--- a/Project.ipynb
+++ b/Project.ipynb
@@ -14,6 +14,10 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
+    "import chart_studio.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "init_notebook_mode(connected=True)\n",
     "import seaborn as sns\n",
     "\n",
     "sns.set(style=\"whitegrid\", palette=\"muted\")\n",
@@ -47,136 +51,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Happiness Rank</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Economy (GDP per Capita)</th>\n",
-       "      <th>Family</th>\n",
-       "      <th>Health (Life Expectancy)</th>\n",
-       "      <th>Freedom</th>\n",
-       "      <th>Generosity</th>\n",
-       "      <th>Trust (Government Corruption)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>152</td>\n",
-       "      <td>Rwanda</td>\n",
-       "      <td>3.334</td>\n",
-       "      <td>0.359</td>\n",
-       "      <td>0.711</td>\n",
-       "      <td>0.614</td>\n",
-       "      <td>0.555</td>\n",
-       "      <td>0.217</td>\n",
-       "      <td>0.411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>153</td>\n",
-       "      <td>Tanzania</td>\n",
-       "      <td>3.231</td>\n",
-       "      <td>0.476</td>\n",
-       "      <td>0.885</td>\n",
-       "      <td>0.499</td>\n",
-       "      <td>0.417</td>\n",
-       "      <td>0.276</td>\n",
-       "      <td>0.147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>154</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>3.203</td>\n",
-       "      <td>0.350</td>\n",
-       "      <td>0.517</td>\n",
-       "      <td>0.361</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.158</td>\n",
-       "      <td>0.025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>155</td>\n",
-       "      <td>Central African Republic</td>\n",
-       "      <td>3.083</td>\n",
-       "      <td>0.026</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.105</td>\n",
-       "      <td>0.225</td>\n",
-       "      <td>0.235</td>\n",
-       "      <td>0.035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>156</td>\n",
-       "      <td>South Sudan</td>\n",
-       "      <td>2.853</td>\n",
-       "      <td>0.306</td>\n",
-       "      <td>0.575</td>\n",
-       "      <td>0.295</td>\n",
-       "      <td>0.010</td>\n",
-       "      <td>0.202</td>\n",
-       "      <td>0.091</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Happiness Rank                   Country  Score  \\\n",
-       "151             152                    Rwanda  3.334   \n",
-       "152             153                  Tanzania  3.231   \n",
-       "153             154               Afghanistan  3.203   \n",
-       "154             155  Central African Republic  3.083   \n",
-       "155             156               South Sudan  2.853   \n",
-       "\n",
-       "     Economy (GDP per Capita)  Family  Health (Life Expectancy)  Freedom  \\\n",
-       "151                     0.359   0.711                     0.614    0.555   \n",
-       "152                     0.476   0.885                     0.499    0.417   \n",
-       "153                     0.350   0.517                     0.361    0.000   \n",
-       "154                     0.026   0.000                     0.105    0.225   \n",
-       "155                     0.306   0.575                     0.295    0.010   \n",
-       "\n",
-       "     Generosity  Trust (Government Corruption)  \n",
-       "151       0.217                          0.411  \n",
-       "152       0.276                          0.147  \n",
-       "153       0.158                          0.025  \n",
-       "154       0.235                          0.035  \n",
-       "155       0.202                          0.091  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nineteen.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Visualization\n",
+    "\n",
+    "First, we will try to understand the correlation between few variables. For this, first compute the correlation matrix among the variables and plotted as heat map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nt = nineteen[['Score','GDP per capita','Social support','Healthy life expectancy', 'Freedom to make life choices', \n",
+    "          'Generosity','Perceptions of corruption']] #Subsetting the data\n",
+    "cor = nt.corr() #Calculate the correlation of the above variables\n",
+    "sns.heatmap(cor, square = True) #Plot the correlation as heat map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have obtained the heatmap of correlation among the variables. The color palette in the side represents the amount of correlation among the variables. The lighter shade represents high correlation. We can see that happiness score is highly correlated with GDP per capita, family and life expectancy. It is least correlated with generosity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.plot(kind='scatter',x='Score',y='Healthy life expectancy',color='red',alpha=.5)\n",
+    "plt.xlabel(' Happiness Score')\n",
+    "plt.ylabel('Healthy life expectancy')\n",
+    "plt.title('Happiness Score vs Health')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is very clear that there is a positive relationship with health."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.plot(kind='scatter',x='GDP per capita',y='Healthy life expectancy',color='red',alpha=.5)\n",
+    "plt.xlabel('GDP per capita')\n",
+    "plt.ylabel('Healthy life expectancy')\n",
+    "plt.title('GDP per capita vs Health')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a highly positive correlation between economy and life expectancy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nineteen.plot(kind='scatter',x='Perceptions of corruption',y='Score',color='red',alpha=.5)\n",
+    "plt.xlabel('Perceptions of corruption')\n",
+    "plt.ylabel('Happiness score')\n",
+    "plt.title('Perceptions of corruption vs Happiness score')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no correlation between Happiness Score and Perceptions of corruption."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dict(\n",
+    "        type = 'choropleth',\n",
+    "        colorscale = 'Viridis',\n",
+    "         marker_line_width=1,\n",
+    "        locations = nineteen['Country or region'],\n",
+    "        locationmode = \"country names\",\n",
+    "        z = nineteen['Score'],\n",
+    "        text = nineteen['Country or region'],\n",
+    "        colorbar = {'title' : 'Happiness Score'},\n",
+    "        \n",
+    "      )\n",
+    "layout = dict(title = 'Happiness Map',\n",
+    "              geo = dict(projection = {'type':'mercator'}, showocean = False, showlakes = True, showrivers = True, )\n",
+    "             )\n",
+    "choromap = go.Figure(data = [data],layout = layout)\n",
+    "iplot(choromap,validate=False)"
    ]
   }
  ],
